--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,15 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Blake Feggans
-email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Just a dude trying to keep track of random thoughts, technologies, and whatnot.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: blake_placid
+github_username:  bfeggans
 
 # Build settings
 theme: minima
